  perform a fresh init() after a draft save.  This is primarily used by other modules which might be making changes to the degree plan in real time,
  and do not want to reload the entire student.  By default it is set to 'no', replicating existing functionlity that skips that step.
  

2022-07-22
  Added extra class to pie chart rows-- the total number of intended rows.  This lets us target with CSS with more precision.


2022-07-19
  Small change to popup course description, so repeat hours do not show excess zeroes.
  
  Made changes so that you can have specified repeats in groups with branches.
  

2022-07-12
  Made modifications to student_priority module, so that tests can be pulled directly from user attributes, rather than having
  the need to run an entire function.  Both methods are documented in the .api.php file.
  

2022-07-11
  Made a small change in user.module, so that attributes with quotes in the title show dialog correctly.
  
  Fixed documentation error.
  
  Removed hard-coded student priority tests/calculations.  Instead, added to the api.php file.
    

2022-07-04
  Updated some display code in student_search.
  
  Altered checkbox for inactive students code in student_search submit function.
  

2022-06-30
  Small adjustment in engagments-- made email tracking token sha512, and based on microtime + extra randomness to try to ensure uniqueness.
   

2022-06-27
  Made it so the system only tries to trim the watchdog once every 7 days, rather than on every cron run.
  
  Added extra wording to some watchdog entries for clarity.
  

2022-06-23
  Fixed small bug where CSS class was not being specified on left sidebar items.
  
  During the "duplicate entire catalog year" function, there was a die() statement if a group couldn't be found.  Changed
  that to simply display a message.
  

2022-06-17