@@ -15,6 +15,8 @@ FlightPath 6.x Changelog
   perform a fresh init() after a draft save.  This is primarily used by other modules which might be making changes to the degree plan in real time,
   and do not want to reload the entire student.  By default it is set to 'no', replicating existing functionlity that skips that step.
   
+  Converted the AdvisingScreen::build_footnotes function to use render array, so other modules can add footnotes if necessary.
+  
 
 2022-07-22
   Added extra class to pie chart rows-- the total number of intended rows.  This lets us target with CSS with more precision.
